--- a/templates/about.html
+++ b/templates/about.html
@@ -8,5 +8,7 @@
 <h2>About</h2>
 <h1>Hi every thing is ok - don't 4get to do homework</h1>
 <a href="{% url 'home' %}">Return home</a>
+
+Copyright 2020
 </body>
 </html>
